[project]
name = "project"
version = "0.1.0"
dependencies  = [
    "aiohttp==3.9.3",
    "aiohttp_cors==0.7.0",
    "aiohttp-fast-url-dispatcher==0.3.0",
    "aiohttp-zlib-ng==0.3.1",
    "astral==2.2",
    "attrs==23.2.0",
    "atomicwrites-homeassistant==1.4.1",
    "awesomeversion==23.11.0",
    "pip>=21.3.1",
    "python-slugify==8.0.1",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "typing-extensions>=4.9.0,<5.0",
    "ulid-transform==0.9.0",
    "urllib3>=1.26.5,<2",
    "voluptuous==0.13.1",
    "voluptuous-serialize==2.6.0",
    "yarl==1.9.4",
]

[tool.pixi.project]
name = "x"
platforms = ["linux-64"]
channels = ["conda-forge"]
[tool.pixi.dependencies]
python = "*"
